--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.1",
   "description": "A simple queue system",
   "main": "index.js",
-  "keywords": ["queue", "database", "sqlite"],
+  "keywords": [
+    "queue",
+    "database",
+    "sqlite"
+  ],
   "author": "Emil Winther",
   "license": "ISC",
   "scripts": {
@@ -12,6 +16,7 @@
   "dependencies": {
     "@types/node": "^20.10.6",
     "@types/sqlite3": "^3.1.11",
+    "mongodb": "^6.3.0",
     "sqlite3": "^5.1.7",
     "typescript": "^5.3.3"
   },
