--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,14 +13,19 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [19.x, 20.x, 21.x]
+        node-version: [12.x, 14.x, 16.x]
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
+      env:
+        ACTIONS_NODE_VERSION: 16
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
+      env:
+        ACTIONS_NODE_VERSION: 16
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
