--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "test": "jest"
   },
   "dependencies": {
+
+  },
+  "devDependencies": {
     "@types/sqlite3": "^3.1.11",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
     "socket.io": "^4.7.3",
     "socket.io-client": "^4.7.3",
     "sqlite3": "^5.1.7",
-    "typescript": "^5.3.3"
-  },
-  "devDependencies": {
+    "typescript": "^5.3.3",
     "@types/node": "^20.10.6",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
